[gd_scene load_steps=6 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/claw.gd" id="2_claw"]
[ext_resource type="Script" path="res://scripts/fish_spawner.gd" id="3_spawner"]
[ext_resource type="Script" path="res://scripts/drop_zone.gd" id="4_dropzone"]
[ext_resource type="Script" path="res://scripts/fish.gd" id="5_fish"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.15, 0.25, 0.4, 1)

[node name="WaterArea" type="ColorRect" parent="."]
offset_top = 850.0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.1, 0.35, 0.55, 1)

[node name="WaterSurface" type="Line2D" parent="."]
points = PackedVector2Array(0, 850, 720, 850)
width = 4.0
default_color = Color(0.3, 0.6, 0.8, 1)

[node name="DropZone" type="Area2D" parent="."]
position = Vector2(600, 300)
script = ExtResource("4_dropzone")

[node name="BucketBack" type="Polygon2D" parent="DropZone"]
color = Color(0.5, 0.35, 0.2, 1)
polygon = PackedVector2Array(-60, -40, 60, -40, 70, 80, -70, 80)

[node name="BucketWater" type="Polygon2D" parent="DropZone"]
color = Color(0.2, 0.5, 0.7, 0.8)
polygon = PackedVector2Array(-50, 0, 50, 0, 55, 70, -55, 70)

[node name="BucketFront" type="Polygon2D" parent="DropZone"]
color = Color(0.6, 0.4, 0.25, 1)
polygon = PackedVector2Array(-60, -40, -50, -40, -60, 80, -70, 80)

[node name="BucketFront2" type="Polygon2D" parent="DropZone"]
color = Color(0.6, 0.4, 0.25, 1)
polygon = PackedVector2Array(50, -40, 60, -40, 70, 80, 60, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropZone"]

[node name="Label" type="Label" parent="DropZone"]
offset_left = -40.0
offset_top = -70.0
offset_right = 40.0
offset_bottom = -40.0
theme_override_font_sizes/font_size = 20
text = "DROP HERE"
horizontal_alignment = 1

[node name="FishSpawner" type="Node2D" parent="."]
position = Vector2(0, 950)
script = ExtResource("3_spawner")

[node name="Claw" type="Node2D" parent="."]
position = Vector2(360, 100)
script = ExtResource("2_claw")

[node name="Rope" type="Line2D" parent="Claw"]
points = PackedVector2Array(0, -100, 0, 0)
width = 4.0
default_color = Color(0.8, 0.7, 0.2, 1)

[node name="ClawHead" type="Node2D" parent="Claw"]

[node name="ClawBase" type="Polygon2D" parent="Claw/ClawHead"]
color = Color(0.7, 0.1, 0.1, 1)
polygon = PackedVector2Array(-25, -20, 25, -20, 20, 10, -20, 10)

[node name="ClawLeft" type="Polygon2D" parent="Claw/ClawHead"]
color = Color(0.8, 0.2, 0.2, 1)
polygon = PackedVector2Array(-20, 10, -10, 10, -15, 45, -25, 40)

[node name="ClawRight" type="Polygon2D" parent="Claw/ClawHead"]
color = Color(0.8, 0.2, 0.2, 1)
polygon = PackedVector2Array(10, 10, 20, 10, 25, 40, 15, 45)

[node name="GrabArea" type="Area2D" parent="Claw/ClawHead"]
position = Vector2(0, 35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Claw/ClawHead/GrabArea"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="ColorRect" parent="UI"]
offset_right = 720.0
offset_bottom = 80.0
color = Color(0.1, 0.15, 0.25, 1)

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 30.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 28
text = "Fish: 0 / 10"

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = 500.0
offset_top = 20.0
offset_right = 690.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 28
text = "Time: 30"
horizontal_alignment = 2

[node name="TimerButton" type="Button" parent="UI"]
offset_left = 480.0
offset_top = 10.0
offset_right = 710.0
offset_bottom = 70.0
flat = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 1.0

[node name="StartPanel" type="Panel" parent="UI"]
offset_left = 110.0
offset_top = 440.0
offset_right = 610.0
offset_bottom = 840.0

[node name="TitleLabel" type="Label" parent="UI/StartPanel"]
offset_left = 50.0
offset_top = 40.0
offset_right = 450.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 42
text = "üêü FISH CATCHER üêü"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="UI/StartPanel"]
offset_left = 30.0
offset_top = 120.0
offset_right = 470.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 20
text = "Hold & drag to control the claw
Catch fish and drop them in the bucket
Catch 10 fish in 30 seconds to win!"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="UI/StartPanel"]
offset_left = 125.0
offset_top = 280.0
offset_right = 375.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 24
text = "SINGLE PLAYER"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
offset_left = 110.0
offset_top = 440.0
offset_right = 610.0
offset_bottom = 840.0

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
offset_left = 50.0
offset_top = 40.0
offset_right = 450.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 42
text = "GAME OVER"
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="UI/GameOverPanel"]
offset_left = 50.0
offset_top = 120.0
offset_right = 450.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 28
text = "You caught 0 fish!"
horizontal_alignment = 1

[node name="WinLoseLabel" type="Label" parent="UI/GameOverPanel"]
offset_left = 50.0
offset_top = 200.0
offset_right = 450.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 32
text = "TRY AGAIN!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel"]
offset_left = 125.0
offset_top = 270.0
offset_right = 375.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 24
text = "PLAY AGAIN"

[node name="HomeButton" type="Button" parent="UI/GameOverPanel"]
offset_left = 125.0
offset_top = 330.0
offset_right = 375.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 24
text = "HOME"

[node name="PausePanel" type="Panel" parent="UI"]
visible = false
offset_left = 110.0
offset_top = 440.0
offset_right = 610.0
offset_bottom = 800.0

[node name="PausedLabel" type="Label" parent="UI/PausePanel"]
offset_left = 50.0
offset_top = 40.0
offset_right = 450.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PausePanel"]
offset_left = 125.0
offset_top = 120.0
offset_right = 375.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 28
text = "RESUME"

[node name="RestartButton" type="Button" parent="UI/PausePanel"]
offset_left = 125.0
offset_top = 200.0
offset_right = 375.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 28
text = "RESTART"

[node name="HomeButton" type="Button" parent="UI/PausePanel"]
offset_left = 125.0
offset_top = 280.0
offset_right = 375.0
offset_bottom = 340.0
theme_override_font_sizes/font_size = 28
text = "HOME"
